[gd_scene load_steps=2 format=3 uid="uid://daily_quest_screen"]

[ext_resource type="Script" path="res://scripts/screens/daily_quest_screen.gd" id="1_quest"]

[node name="DailyQuestScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_quest")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.06, 0.04, 0.1, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
theme_override_constants/separation = 12

[node name="TopBar" type="HBoxContainer" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)

[node name="Title" type="Label" parent="VBox/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "GUNLUK GOREVLER"
horizontal_alignment = 0
vertical_alignment = 1

[node name="BackBtn" type="Button" parent="VBox/TopBar"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(80, 0)
text = "Geri"

[node name="ScrollContainer" type="ScrollContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="QuestList" type="VBoxContainer" parent="VBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="BonusBtn" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "Bonus: 0/3 gorev tamamla"
